2.1.0:

Thu Apr 15 11:04:53 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - driver.list: add MicroDowell B.Box BP 500/750/1000/1500
 - cpups.ch: add MicroDowell support, and fix a segfault on upsdrv_shutdown

   (Armin Diehl) [Alioth Patch #301282]

 - upsstats.c: fix a case where upsstats.cgi crashes if hosts.conf has
   no valid MONITOR lines

   (Charles Lepple) [Alioth Patch #301461]

Thu Apr 15 11:04:53 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - mge-shut.h: add Ellipse Pro models, and bump driver version to 0.63

 * newhidups patch-set:
   - libusb.c: enhance discovery performance (only search for MGE / APC),
   - newhidups.c: 
     - add the code to manage Interrupt Pipe (will improve USB flow
       by lowering polling on device), and a pollfreq parameter
       (default to 60 sec, newhidups will wait for Interrupt in the
       meantime). This is disabled for the moment
     - lower USB flow by only querying ups.status information within
       the above pollfreq period.
     - improve ups.status handling (needed for interrupt and partial
       status update)
     - enhance model name exposure
     - factorise the data walking code
     - a bit of code cleaning
     - enable device reconnexion (still not working!)
   - mge-hid.h: renamed from mgehid.h, and completed with the model names,
     outlet collection, and some missing data
   - apc-hid.h: add and complete this file
   - prepare the future merge of mge-shut
   - add Unitek VendorID

Tue Mar 22 11:10:53 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - driver.list: add missing Mustek PowerMust 1400VA Plus and 2000VA USB

   (Carlos Rodrigues) [Alioth Patch #301289]
   
 * MGE patch-set:
   - driver.list: add Pulsar EXtreme C / EX RT, Comet EX RT, Pulsar SV,
     Pulsar PSX and NOVA AVR USB
   - mge-utalk.ch, mge-utalk.8: enhance support for old units, by adding
     disable_ups_comm, and Si discovering ; rework the model names,